output.txt
In file included from main.c:9:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
In file included from campeonato.c:6:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
campeonato.c: In function ‘campeonatomenu’:
campeonato.c:59:3: warning: implicit declaration of function ‘capeonato’; did you mean ‘calPontos’? [-Wimplicit-function-declaration]
   capeonato(saveS, parti, 0, corridas);
   ^~~~~~~~~
   calPontos
campeonato.c: In function ‘campeonato’:
campeonato.c:116:5: warning: implicit declaration of function ‘fazercorrida’; did you mean ‘vercorrida’? [-Wimplicit-function-declaration]
     fazercorrida(saveS, combina, voltas, comp, maxpart, part);
     ^~~~~~~~~~~~
     vercorrida
In file included from carros.c:6:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
In file included from corrida.c:5:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
corrida.c: In function ‘fazercorrida’:
corrida.c:440:3: warning: implicit declaration of function ‘rempen’; did you mean ‘freopen’? [-Wimplicit-function-declaration]
   rempen(saveS);
   ^~~~~~
   freopen
corrida.c: At top level:
corrida.c:513:6: warning: conflicting types for ‘rempen’
 void rempen(psS saveS)
      ^~~~~~
corrida.c:440:3: note: previous implicit declaration of ‘rempen’ was here
   rempen(saveS);
   ^~~~~~
In file included from menus.c:7:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
menus.c: In function ‘corridamenu’:
menus.c:132:13: warning: implicit declaration of function ‘fazercorrida’; did you mean ‘vercorrida’? [-Wimplicit-function-declaration]
   combina = fazercorrida(saveS, combina, voltas, comp, nMaxP, 0);
             ^~~~~~~~~~~~
             vercorrida
menus.c:132:11: warning: assignment to ‘pCon’ {aka ‘struct conbinacao *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   combina = fazercorrida(saveS, combina, voltas, comp, nMaxP, 0);
           ^
In file included from pilotos.c:8:
corrida.h:58:76: error: unknown type name ‘pCam’; did you mean ‘pCar’?
 pCon fazercorrida(psS saveS, pCon combina, int voltas, int comp,int nMaxP, pCam campeonato);
                                                                            ^~~~
                                                                            pCar
